[metadata]
name = pystandards
version = <version number: 0.0.1>
license = MIT
description = A collection of functions to get data on technical standards
long_description = file: README.rst
author = Lorenz Brachtendorf
author_email = lorenz.brachtendorf@gmx.de
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =pystandards
include_package_data = True
install_requires =
   requests
   BeautifulSoup
   pandas

[options.packages.find]
where=pystandards
