[metadata]
name = pystandards
version = 0.0.1
license = MIT
description = Get data on technical standards
long_description = file: README.rst
author = Lorenz Brachtendorf
author_email = lorenz.brachtendorf@gmx.de
classifiers=

[options]
packages = find:
package_dir =
    =pystandards
include_package_data = True
install_requires =
   requests
   requests.exceptions
   contextlib
   bs4
   pandas
   datetime
   re

[options.packages.find]
where=pystandards
