[metadata]
name = pystandards
version = 0.0.1
license = MIT
description = Get data on technical standards
long_description = file: README.md
author = Lorenz Brachtendorf
author_email = lorenz.brachtendorf@gmx.de
classifiers=

[options]
packages = find:
package_dir =
    =pystandards
include_package_data = True
install_requires =
   requests
   urllib
   bs4
   pandas
   datetime
   time
   re
   os
   selenium

[options.packages.find]
where=pystandards
